fix uneven input/output prompt alignment

--- a/notebook/static/notebook/less/outputarea.less
+++ b/notebook/static/notebook/less/outputarea.less
@@ -41,7 +41,6 @@ div.out_prompt_overlay:hover {
 
 div.output_prompt {
     color: @output_prompt_color;
-    min-width: 15ex;
 }
 
 /* This class is the outer container of all output sections. */
